Shubham with initial search result

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,16 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:fullBackupContent="true">
+        android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA0Tnzaf3S0qyzufk37JeGVFbxk5Dbc5A0" />
+
         <activity
             android:name=".SearchActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -36,12 +40,11 @@
         <activity
             android:name=".Login.SignUpActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".Dash.DashActivity"
+            android:label="Dashboard"/>
         <activity
-            android:name=".Dash.DashActivity"
+            android:name=".SearchResultActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <meta-data
-                android:name="com.google.android.geo.API_KEY"
-                android:value="AIzaSyA0Tnzaf3S0qyzufk37JeGVFbxk5Dbc5A0"/>
     </application>
 
 </manifest>
