--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,14 +26,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:25.3.0'
+
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:design:25.3.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:5.1.2'
-    compile 'com.android.support:support-vector-drawable:25.3.0'
+    compile 'com.android.support:support-vector-drawable:25.3.1'
     compile 'com.google.android.gms:play-services-places:9.2.0'
-
+    compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
 }
