--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.3.0'
     compile 'com.google.android.gms:play-services-places:9.2.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services-location:9.2.0'
 }
